Fix tertiary text alignment and add width limit (#355)
* Fix tertiary text alignment and add width limit

* Adjust height on secondary image

--- a/src/css/components/_v-scroll-menu-item.scss
+++ b/src/css/components/_v-scroll-menu-item.scss
@@ -37,7 +37,7 @@
 
         div {
             width: 100%;
-            height: 100%;
+            height: 85%;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -65,6 +65,7 @@
         flex: 0.5;
         margin: auto;
         align-self: flex-end;
+        max-width: 55px;
 
         svg {
             display: block;
